HAWQ-1599. Add PXF-Ignite plug-in.
(close #1344)

The PXF-Ignite plug-in allows to read data from Ignite database.
The syntax is similar to one of PXF-JDBC plug-in.

This implementation uses Ignite REST API. It can be easily modified to access any other databases or services via REST API.

This commit does not change `pxf-service` links and classpath files. They should be added manually in order for the PXF-Ignite to work.

See pxf-ignite/README.md for instructions on how to use this plug-in.

PXF Ignite plug-in: Implement write access

This commit adds the support of write operations to the PXF Ignite plug-in.

PXF Ignite plug-in: tests and fixes

PXF Ignite plug-in: fixes proposed by contributors

PXF Ignite plug-in: Fixes proposed by @hornn, @denalex

PXF Ignite plug-in: Fixed nullptr exception and invalid bufferWrite operations

PXF Ignite plug-in: Fixes proposed by @denalex, @sansanichfb

Use 'apache.commons.compress.utils.ByteUtils' instead of a custom 'ByteUtil' library to process fragment metadata;
This also removes the dependence of 'apache.commons.lang.ArrayUtils'.
This fix was proposed by @denalex.

Change signature of the 'buildFragmenterSql()' function in 'IgnitePartitionFragmenter', so that it returns void.
This fix was proposed by @sansanichfb.

PXF Ignite plug-in: minor codestyle improvements

PXF Ignite plug-in: README.md update

PXF Ignite plug-in: Fix handling of TIMESTAMP

Fix handling of TIMESTAMP values with milli- and microseconds

SimpleDateFormat objects are now ThreadLocal (due to safety reasons)

--- a/build.gradle
+++ b/build.gradle
@@ -334,6 +334,7 @@ project('pxf') {
         requires(versionedPackageName('pxf-hbase'), project.version, GREATER | EQUAL)
         requires(versionedPackageName('pxf-json'), project.version, GREATER | EQUAL)
         requires(versionedPackageName('pxf-jdbc'), project.version, GREATER | EQUAL)
+        requires(versionedPackageName('pxf-ignite'), project.version, GREATER | EQUAL)
 
         preInstall file('src/scripts/pre-install.sh')
         postInstall file('src/scripts/post-install.sh')
@@ -478,7 +479,6 @@ project('pxf-hbase') {
     }
 }
 
-
 project('pxf-jdbc') {
     dependencies {
         compile(project(':pxf-api'))
@@ -509,6 +509,36 @@ project('pxf-jdbc') {
         link("/usr/lib/pxf-${project.version}/${project.name}.jar", "${project.name}-${project.version}.jar")
     }
 }
+
+project('pxf-ignite') {
+    dependencies {
+        compile(project(':pxf-api'))
+        compile(project(':pxf-service'))
+        compile 'com.google.code.gson:gson:2.8.2'
+        compile 'org.apache.commons:commons-compress:1.16.1'
+        testCompile 'com.google.code.gson:gson:2.8.2'
+        testCompile 'org.apache.commons:commons-compress:1.16.1'
+    }
+
+    ospackage {
+        packageName = versionedPackageName("${project.name}")
+        summary = 'HAWQ Extension Framework (PXF), Apache Ignite plugin'
+        description = 'Querying external data stored in the Apache Ignite database.'
+        packager = ' '
+        packageGroup = 'Development/Libraries'
+        release = buildNumber() + '.' + project.osFamily
+        buildHost = ' '
+
+        requires(versionedPackageName('pxf-service'), project.version, GREATER | EQUAL)
+
+        from(jar.outputs.files) {
+            into "/usr/lib/pxf-${project.version}"
+        }
+
+        link("/usr/lib/pxf-${project.version}/${project.name}.jar", "${project.name}-${project.version}.jar")
+    }
+}
+
 
 def buildNumber() {
     System.getenv('BUILD_NUMBER') ?: System.getProperty('user.name')
