--- a/pxf-service/src/configs/templates/pxf-private-hdp.classpath.template
+++ b/pxf-service/src/configs/templates/pxf-private-hdp.classpath.template
@@ -18,7 +18,7 @@
 # with RPM-based installation of hadoop clients from HDP distribution.
 # WARNING: DO NOT EDIT!
 # Any change in this file can result in PXF failing to run.
-# Adding resources should be done using pxf-public.classpath file. 
+# Adding resources should be done using pxf-public.classpath file.
 ##################################################################
 
 # PXF Configuration
@@ -30,6 +30,7 @@ PXF_HOME/lib/pxf-hdfs.jar
 PXF_HOME/lib/pxf-hive.jar
 PXF_HOME/lib/pxf-json.jar
 PXF_HOME/lib/pxf-jdbc.jar
+PXF_HOME/lib/pxf-ignite.jar
 
 # Hadoop/Hive/HBase configurations
 /etc/hadoop/conf
@@ -50,6 +51,7 @@ PXF_HOME/lib/pxf-jdbc.jar
 /usr/hdp/current/hadoop-client/client/commons-io.jar
 /usr/hdp/current/hadoop-client/client/commons-lang.jar
 /usr/hdp/current/hadoop-client/client/commons-logging.jar
+/usr/hdp/current/hadoop-client/client/commons-compress.jar
 /usr/hdp/current/hadoop-client/client/guava.jar
 /usr/hdp/current/hadoop-client/client/htrace-core.jar
 /usr/hdp/current/hadoop-client/client/jackson-core-asl.jar
@@ -62,6 +64,7 @@ PXF_HOME/lib/pxf-jdbc.jar
 /usr/hdp/current/hadoop-client/client/snappy-java.jar
 /usr/hdp/current/hadoop-client/lib/asm-*[0-9].jar
 /usr/hdp/current/hadoop-client/lib/jersey-server-*[0-9].jar
+/usr/hdp/current/hadoop-client/client/gson-*[0-9].jar
 
 # Hive Libraries
 /usr/hdp/current/hive-client/lib/antlr-runtime-*[0-9].jar
