HAWQ-1645. Remove autogeneration of version number from pxf/build.gradle
This enables us to use IntelliJ's code navigation and refactoring
features. Previously, IntelliJ would navigate to / refactor the
generated files rather than the source files since the generated files
were the ones that actually got compiled.

Co-authored-by: Lav Jain <ljain@pivotal.io>
Co-authored-by: Ben Christel <bchristel@pivotal.io>

--- a/pxf-service/src/main/webapp/WEB-INF/web.xml
+++ b/pxf-service/src/main/webapp/WEB-INF/web.xml
@@ -67,7 +67,7 @@ under the License.
     </filter>
     <filter-mapping>
         <filter-name>PXF Security Filter</filter-name>
-        <url-pattern>/@pxfProtocolVersion@/*</url-pattern>
+        <url-pattern>/v15/*</url-pattern>
     </filter-mapping>
 
     <!-- log4j configuration 
