Updates to tests for filter pushdown with ORCA (#43)
* Added test queries with ORCA enabled for filter pushdown.

Co-authored-by: Alex Denissov <adenissov@pivotal.io>
Co-authored-by: Shivram Mani <smani@pivotal.io>

* Fix test to work with ORCA filterstring

* modified the expected filterstring from orca

* Explicitly export PXF_HOME in test script

Co-authored-by: Alex Denissov <adenissov@pivotal.io>
Co-authored-by: Shivram Mani <smani@pivotal.io>

* Fix the expected response for filter pushdown tests with orca enabled

Co-authored-by: Alex Denissov <adenissov@pivotal.io>
Co-authored-by: Shivram Mani <smani@pivotal.io>

* parseFilter string as part of filter fragmenter

Co-authored-by: Alex Denissov <adenissov@pivotal.io>
Co-authored-by: Shivram Mani <smani@pivotal.io>

* set filter pushdown guc to true

Co-authored-by: Alex Denissov <adenissov@pivotal.io>
Co-authored-by: Shivram Mani <smani@pivotal.io>

* push filterbuilder class

Co-authored-by: Alex Denissov <adenissov@pivotal.io>
Co-authored-by: Shivram Mani <smani@pivotal.io>

* taking care of the case with no filter string

Co-authored-by: Alex Denissov <adenissov@pivotal.io>
Co-authored-by: Shivram Mani <smani@pivotal.io>

* filter pushdown with boolean data type

Co-authored-by: Alex Denissov <adenissov@pivotal.io>
Co-authored-by: Shivram Mani <smani@pivotal.io>

* Added more queries to predicate pushdown tests.

Co-authored-by: Alex Denissov <adenissov@pivotal.io>
Co-authored-by: Shivram Mani <smani@pivotal.io>

--- a/pxf_automation/Makefile
+++ b/pxf_automation/Makefile
@@ -15,11 +15,15 @@ ifneq "$(GROUP)" ""
     MAVEN_TEST_OPTS+= -Dgroups=$(GROUP)
 endif
 
-ifeq "$(PG_MODE)" "GPDB"
+ifeq "$(PG_MODE)" "HAWQ"
+    MAVEN_TEST_OPTS+= -DPXF_LIB=$(GPHD_ROOT)/pxf
+else
+	# Default PG_MODE is GPDB
+	ifeq "$(PXF_HOME)" ""
+		PXF_HOME=$(GPHOME)/pxf
+	endif
     MAVEN_TEST_OPTS+= -DPG_MODE=$(PG_MODE)
     MAVEN_TEST_OPTS+= -DPXF_LIB=$(PXF_HOME)/lib
-else
-    MAVEN_TEST_OPTS+= -DPXF_LIB=$(GPHD_ROOT)/pxf
 endif
 
 ifneq "$(OFFLINE)" "true"
