Update CI pipeline to use the combined PXF repo (#1)
Other changes:
- Delete the pxf_server directory and consolidate the README files into one.
- Add Lav's instructions for setting up a docker environment

Co-authored-by: Lav Jain <ljain@pivotal.io>
Co-authored-by: Shivram Mani <smani@pivotal.io>
Co-authored-by: Ben Christel <bchristel@pivotal.io>

--- a/concourse/default.yml
+++ b/concourse/default.yml
@@ -1,13 +1,9 @@
 # DEFAULT YML FILE #
 
-# Use https in git-remote URLs for public git repos
-# Use git@github.com (SSH) for private repos such as Pivotal-DataFabric
+gpdb-git-remote: https://github.com/greenplum-db/gpdb.git
+gpdb-git-branch: master
 
-# gpdb-git-remote: https://github.com/greenplum-db/gpdb.git
-# gpdb-git-branch: master
-
-# pxf-git-remote: https://github.com/apache/incubator-hawq
-# pxf-git-branch: master
-
-# pxf_infra-git-remote: git@github.com:Pivotal-DataFabric/pxf_infra.git
-# pxf_infra-git-branch: master
+pxf-git-remote: git@github.com:/greenplum-db/pxf.git
+pxf-git-branch: master
+pxf-git-key: |
+  YOUR KEY HERE
