--- a/concourse/install_hadoop.yml
+++ b/concourse/install_hadoop.yml
@@ -3,7 +3,7 @@ image_resource:
   type: docker-image
 inputs:
   - name: cluster_env_files
-  - name: pxf_infra_src
+  - name: pxf_src
   - name: pxf_tarball
 run:
-  path: pxf_infra_src/concourse/install_hadoop.bash
+  path: pxf_src/concourse/install_hadoop.bash
