--- a/concourse/test_pxf_secure.yml
+++ b/concourse/test_pxf_secure.yml
@@ -3,7 +3,7 @@ image_resource:
   type: docker-image
 inputs:
   - name: gpdb_src
-  - name: pxf_infra_src
+  - name: pxf_src
   - name: bin_gpdb
   - name: pxf_tarball
 params:
@@ -13,4 +13,4 @@ params:
   TARGET_OS: centos
   TARGET_OS_VERSION: 6
 run:
-  path: pxf_infra_src/concourse/test_pxf_secure.bash
+  path: pxf_src/concourse/test_pxf_secure.bash
