--- a/concourse/docker-images.yml
+++ b/concourse/docker-images.yml
@@ -345,7 +345,7 @@ jobs:
         build: .
         dockerfile: pxf_infra/concourse/docker/centos6-pxf/Dockerfile
         build_args:
-          BASE_IMAGE: "centos-gpdb-dev:6-gcc6.2-llvm3.7"
+          BASE_IMAGE: "gpdb-dev:centos6"
 
   - name: docker-gpdb-pxf-dev-centos6-cdh-client
     plan:
