TEZ to MR substitution should be for HDP - not CDH

--- a/singlecluster/Makefile
+++ b/singlecluster/Makefile
@@ -113,7 +113,7 @@ copy_templates: $(TEMPLATES)
 	cp -r $(TEMPLATESROOT)/conf $(BUILDROOT)
 
 	-find $(BUILDROOT) -iname "*~" | xargs rm -f
-	if [ "$(HADOOP_DISTRO)" == "CDH" ]; then \
+	if [ "$(HADOOP_DISTRO)" != "CDH" ]; then \
 		cat $(TEMPLATESROOT)/hive/conf/hive-site.xml | sed "s/<value>tez<\/value>/<value>mr<\/value>/" > $(BUILDROOT)/hive/conf/hive-site.xml;\
 	fi
 
