PXF Performance Pipeline (#6)
This is is the first iteration of the performance pipeline. The pipeline is defined as follows:

Provision GPDB and Hadoop Clusters
Hadoop is preloaded with 10G of data, consisting of 10 CSV files of ~1G each
Install PXF and configure GPHDFS
Read data from Hadoop using PXF and GPHDFS and recording query times
Write data from GPDB into Hadoop using PXF and GPHDFS and recording query times
[#160526219]

Co-authored-by: Francisco Guerrero aguerrero@pivotal.io
Co-authored-by: Lav Jain ljain@pivotal.io

--- a/concourse/pxf_pipeline.yml
+++ b/concourse/pxf_pipeline.yml
@@ -142,7 +142,7 @@ jobs:
     - get: gpdb-pxf-dev-centos6
   - task: compile_pxf
     image: gpdb-pxf-dev-centos6
-    file: pxf_src/concourse/compile_pxf.yml
+    file: pxf_src/concourse/tasks/compile_pxf.yml
   - put: pxf_tarball
     params:
       file: pxf_artifacts/pxf.tar.gz
@@ -165,7 +165,7 @@ jobs:
       trigger: true
     - get: gpdb-pxf-dev-centos6-hdp-server
   - task: test_pxf
-    file: pxf_src/concourse/test_pxf.yml
+    file: pxf_src/concourse/tasks/test_pxf.yml
     image: gpdb-pxf-dev-centos6-hdp-server
     params:
       GROUP: gpdb,proxy
@@ -192,7 +192,7 @@ jobs:
       trigger: true
     - get: gpdb-pxf-dev-centos6-hdp-secure
   - task: test_pxf_secure
-    file: pxf_src/concourse/test_pxf_secure.yml
+    file: pxf_src/concourse/tasks/test_pxf_secure.yml
     image: gpdb-pxf-dev-centos6-hdp-secure
     privileged: true
     params:
@@ -249,16 +249,18 @@ jobs:
     - task: intialize_greenplum
       file: ccp_src/ci/tasks/gpinitsystem.yml
     - task: install_hadoop
-      file: pxf_src/concourse/install_hadoop.yml
+      file: pxf_src/concourse/tasks/install_hadoop.yml
       image: gpdb-pxf-dev-centos6-hdp-server
       params:
         IMPERSONATION: {{enable-impersonation-multinode}}
         PXF_JVM_OPTS: {{pxf-jvm-opts}}
   - task: test_pxf_multinode
+    input_mapping:
+      bin_gpdb: gpdb_binary
     on_success:
       <<: *ccp_destroy
     image: gpdb-pxf-dev-centos6-hdp-server
-    file: pxf_src/concourse/test_pxf_multinode.yml
+    file: pxf_src/concourse/tasks/test_pxf_multinode.yml
     params:
       NO_OF_FILES: {{no_of_files}}
 
@@ -280,7 +282,7 @@ jobs:
       trigger: true
     - get: gpdb-pxf-dev-centos6-cdh-server
   - task: test_pxf
-    file: pxf_src/concourse/test_pxf.yml
+    file: pxf_src/concourse/tasks/test_pxf.yml
     image: gpdb-pxf-dev-centos6-cdh-server
     params:
       GROUP: gpdb,proxy
@@ -305,7 +307,7 @@ jobs:
       trigger: true
     - get: gpdb-pxf-dev-centos6-hdp-server
   - task: test_pxf
-    file: pxf_src/concourse/test_pxf.yml
+    file: pxf_src/concourse/tasks/test_pxf.yml
     image: gpdb-pxf-dev-centos6-hdp-server
     params:
       IMPERSONATION: false
