--- a/concourse/tasks/test_pxf_multinode.yml
+++ b/concourse/tasks/test_pxf_multinode.yml
@@ -2,8 +2,9 @@ platform: linux
 image_resource:
   type: docker-image
 inputs:
-  - name: cluster_env_files
   - name: pxf_src
+  - name: cluster_env_files
+  - name: bin_gpdb
   - name: pxf_tarball
 run:
-  path: pxf_src/concourse/install_hadoop.bash
+  path: pxf_src/concourse/scripts/test_pxf_multinode.bash
