Use a condition to change PXF extension folder
This is because in GPDB 6 the extension moved to
contrib folder. In previous versions, it was in gpAux/extensions.

Co-authored-by: Lav Jain <ljain@pivotal.io>
Co-authored-by: Divya Bhargov <dbhargov@pivotal.io>

--- a/concourse/pxf_pipeline.yml
+++ b/concourse/pxf_pipeline.yml
@@ -36,6 +36,7 @@ resources:
     uri: {{gpdb-git-remote}}
     paths:
     - gpAux/extensions/pxf
+    - gpcontrib/pxf
 
 - name: pxf_src
   type: git
